# nucleus-jupyterhub

./: .gitignore  Dockerfile.jupyterhub  Dockerfile.notebook  docker-compose.2i2c.yml  docker-compose.dev.yml  docker-compose.yml  jupyterhub_config.py  override.dev.yml
config/: jupyter_server_config_additional.py  overrides.json
config/jupyterhub-style/: variables.scss
config/nucleus-env/: README.md  pyproject.toml
envs/modeling/: pyproject.toml
home-overlay/: .curvenote  .p10k.zsh  .zsh_plugins.txt  .zshrc
home-overlay/.config/nvim/: init.lua
home-overlay/.jupyter/custom/: custom.css
home-overlay/.jupyter/jupyter_app_launcher/: jp_app_launcher.yml  jp_app_launcher_test.yml  jp_app_launcher_test2.yaml
home-overlay/.jupyter/lab/user-settings/@jupyterlab/application-extension/: top-bar.jupyterlab-settings
home-overlay/.jupyter/lab/user-settings/@jupyterlab/apputils-extension/: notification.jupyterlab-settings  theme.jupyterlab-settings
home-overlay/.jupyter/lab/user-settings/jupyterlab-topbar-text/: plugin.jupyterlab-settings
home-overlay/.jupyter/serverconfig/: jupyterlabapputilsextensionannouncements.json
home-overlay/.local/share/jupyter/jupyter_app_launcher/: jp_app_launcher_nucleus.yml
home-overlay/sample-data/: biotek_synergy_fluorescence_kinetics.txt
home-overlay/work/devnotes/: README.md
home-overlay/work/devnotes/00_template/: 00-template-curvenote.yml  00-template-environment.yml  00-template-main.md  curvenote.yml  dep-curvenote.yml  environment.yml  main.md
home-overlay/work/devnotes/00_template/experimental-01/: 20250220-analysis.ipynb
home-overlay/work/devnotes/00_template/experimental-02/: 20250302-MTHFS-02-summary-table.xlsx  platemap-acjs.tsv
home-overlay/work/devnotes/00_template/src/: 20250220-analysis.ipynb
home-overlay/work/sample-data/: platemap.csv
nucleus-env/: pyproject.toml
nucleus-env/src/nucleus_env/: __init__.py
share/: curvenote-logo.ai  set-token.html
share/caddy/: error.html
share/caddy/css/: .gitignore
share/theme/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
share/theme/nucleus_hub_theme/: __init__.py
share/theme/src/: index.ts
share/theme/style/: index.css  variables.css
templates/platereader/: platereader.ipynb
(+7 files in other folders)
